--- a/index.html
+++ b/index.html
@@ -11,19 +11,25 @@
 <body>
   <header class="header">
     <div class="header__background-image">
+      <input type="checkbox" id="header__burger-menu" class="header__burger-menu">
+      <label for="header__burger-menu" class="burger-menu">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </label>
       <div class="wrapper">
         <div class="header__logo-menu">
           <div class="header__logo"><a href="#0"><img src="./svg/noemi-logo.svg" alt="noemi-logo"></a>
           </div>
-          <nav class="header__nav">
-            <ul class="header__nav-list">
-              <li><a class="header__nav-items" href="#0">главная</a> </li>
-              <li><a class="header__nav-items" href="#0">посты</a></li>
-              <li><a class="header__nav-items" href="#0">статьи</a></li>
-              <li><a class="header__nav-items" href="#0">теги</a></li>
-              <li><a class="header__nav-items" href="#0">темы</a></li>
-              <li><a class="header__nav-items" href="#0">контакты</a></li>
-            </ul>
+            <nav class="header__nav">
+              <ul class="header__nav-list">
+                <li class="header__nav-button"><a class="header__nav-items" href="#0">главная</a> </li>
+                <li class="header__nav-button"><a class="header__nav-items" href="#0">посты</a></li>
+                <li class="header__nav-button"><a class="header__nav-items" href="#0">статьи</a></li>
+                <li class="header__nav-button"><a class="header__nav-items" href="#0">теги</a></li>
+                <li class="header__nav-button"><a class="header__nav-items" href="#0">темы</a></li>
+                <li class="header__nav-button"><a class="header__nav-items" href="#0">контакты</a></li>
+              </ul>
           </nav>
         </div>
 
@@ -34,12 +40,57 @@
     </div>
   </header>
 
+  <input type="checkbox" id="pop-up-toggle" class="pop-up-toggle" hidden>
+  <div class="pop-up">
+    <label for="pop-up-toggle">
+    <img src="./svg/form-x.svg" alt="кнопка close" class="pop-up__x-img">
+    </label>
+
+    <div class="pop-up__position">
+      <h2 class="pop-up__title ">ваш фидбек</h2>
+    </div>
+    <form class="pop-up__form">
+      <label class="pop-up__select-group">
+        <span class="pop-up__select-label">Как часто вы заходите на сайт?</span>
+        <select class="select">
+          <option value="almost" selected>Почти каждый день</option>
+          <option value="every">Каждый день</option>
+          <option value="week">Несколько раз в неделю</option>
+          <option value="month">Несколько раз в месяц</option>
+          <option value="never">Никогда</option>
+        </select>
+      </label>
+    </form>
+    <form class="pop-up__subscribe">
+      <label class="pop-up__subscribe-title">Вы подписаны на e-mail рассылку?</label>
+      <input type="radio" name="subscribe-option" id="yes" value="yes" checked>
+      <label for="yes" class="subscribe-yes">Да</label>
+      <input type="radio" name="subscribe-option" id="no" value="yes">
+      <label for="no" class="subscribe-no">Нет</label>
+    </form>
+    <form class="pop-up__extra-info">
+      <label for="pop-up__extra">Расскажите, какой контент вы хотели бы видеть на нашем сайте?</label>
+      <textarea id="pop-up__extra" name="pop-up__extra" rows="3" cols="40">Может, больше рецептов?</textarea>
+
+      <div class="pop-up__button">
+        <button class="pop-up__submission" type="submit">отправить</button>
+      </div>
+    </form>
+  </div>
+  <div class="pop-up__image-form">
+    <label for="pop-up-toggle">
+        <img src="./svg/pop-up_form.svg" alt="pop-up форма" class="pop-up-toggle__svg">
+    </label>
+</div>
+  <div id="overlay" class="overlay"></div>
+
   <!--------- TRANDS  --------->
 
   <section class="trands">
     <h2 class="trands__title">cейчас в тренде</h2>
     <div class="trands__cards">
-      <article class="trands__card-item trands__item-first">
+
+      <article class="trands__card-item trands__image-first">
         <div class="trands__card-content">
           <div class="trands__card-tags">
             <ul class="trands__card-list">
@@ -47,10 +98,11 @@
               <li><a class="trands__tags-item" href="#0">interior</a></li>
             </ul>
           </div>
-          <h2 class="trands__card-title first-title">сейчас в тренде: сад на подоконнике</h2>
+          <h2 class="trands__card-title first-title">сейчас в тренде: сад 
+            на подоконнике</h2>
         </div>
       </article>
-      <article class="trands__card-item trands__item-second">
+      <article class="trands__card-item trands__image-second">
         <div class="trands__card-content">
           <div class="trands__card-tags">
             <ul class="trands__card-list">
@@ -60,7 +112,7 @@
           <h2 class="trands__card-title">сыры на красивых картинках из интернета: какие они на вкус?</h2>
         </div>
       </article>
-      <article class="trands__card-item trands__item-thrid">
+      <article class="trands__card-item trands__image-thrid">
         <div class="trands__card-content">
           <div class="trands__card-tags">
             <ul class="trands__card-list thrid-tags">
@@ -71,7 +123,7 @@
           <h2 class="trands__card-title thrid-title">собираемся в первый поход в горы</h2>
         </div>
       </article>
-      <article class="trands__card-item trands__item-fourth">
+      <article class="trands__card-item trands__image-fourth">
         <div class="trands__card-content">
           <div class="trands__card-tags">
             <ul class="trands__card-list fourth-tags">
@@ -88,7 +140,7 @@
 
   <!--------- MAIN  --------->
 
-  <div class="wrapper">
+<div class="wrapper">
     <main class="main">
       <section class="posts">
 
@@ -232,11 +284,11 @@
             </div>
           </div>
         </article>
-      </section>
+      </section> 
 
-      <!--------- ASIDE  --------->
+  <!--------- ASIDE  --------->
 
-      <aside class="aside">
+<aside class="aside">
 
         <section class="aside__latest-posts">
           <div class="aside__title">
@@ -301,11 +353,11 @@
                 <h3 class="aside__post-title_h3"><a href="#0">лучшие прически для распущенных волос</a></h3>
               </div>
             </div>
-          </article>
+          </article> 
 
-          <!-- search form -->
+  <!-- search form -->
 
-          <div class="search-form">
+ <div class="search-form">
             <form class="search">
               <label class="search-row">
                 <span class="visually-hidden">Введите ваш поисковый запрос</span>
@@ -315,11 +367,11 @@
                   поисковый запрос</span></button>
             </form>
           </div>
-        </section>
+        </section> 
 
-        <!-- email form  -->
+  <!-- email form  -->
 
-        <section class="mailing-tags">
+<section class="mailing-tags">
           <div class="aside__title-mailing">
             <h2 class="aside__section-title">рассылка</h2>
           </div>
@@ -330,9 +382,9 @@
             </label>
             <button class="email-button"><span class="visually-hidden">Отправить ваш email</span>подписаться</button>
           </form>
-        </section>
+        </section> 
 
-        <!-- tags -->
+  <!-- tags -->
 
         <section class="aside__tags-section">
           <div class="aside__title">
@@ -350,11 +402,11 @@
               <li><a href="#0">health</a></li>
             </ul>
           </div>
-        </section>
+        </section> 
 
-        <!-- themes -->
+  <!-- themes -->
 
-        <section class="aside__themes">
+<section class="aside__themes">
           <div class="aside__title">
             <h2 class="aside__section-title">темы</h2>
           </div>
@@ -368,14 +420,14 @@
               <li class="themes-list-item"><a class="themes-item" href="#0">Йога<span class="aside__text-decoration">8</span></a></li>
             </ul>
           </div>
-        </section>
-      </aside>
-    </main>
+        </section> 
+  </aside>
+  </main>
   </div>
 
   <!--------- SHOP  --------->
 
-  <section class="shop">
+<section class="shop">
     <div class="wrapper">
       <h2 class="shop__title">наши изделия</h2>
       <div class="shop__cards">
@@ -433,11 +485,11 @@
         </article>
       </div>
     </div>
-  </section>
+  </section> 
 
   <!--------- FOOTER  --------->
 
-  <footer class="footer">
+<footer class="footer">
     <div class="wrapper">
       <address class="footer__address">
         <ul class="footer__address-list">
@@ -457,7 +509,7 @@
       </address>
       <small class="footer__copyright">Copyright © 2009–2019 City Blog LLC.</small>
     </div>
-  </footer>
+  </footer> 
 </body>
 
 </html>
