--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
       <textarea id="pop-up__extra" name="pop-up__extra" rows="3" cols="38">Может, больше рецептов?</textarea>
 
       <div class="pop-up__button">
+        <span class="visually-hidden">Отправить форму</span>
         <button class="pop-up__submission" type="submit">отправить</button>
       </div>
     </form>
