--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+
+  <!--------- HEADER --------->
+
   <header class="header">
     <div class="header__background-image">
       <input type="checkbox" id="header__burger-menu" class="header__burger-menu">
@@ -39,6 +42,8 @@
       </div>
     </div>
   </header>
+
+  <!--------- POP-UP --------->
 
   <input type="checkbox" id="pop-up-toggle" class="pop-up-toggle" hidden>
   <div class="pop-up">
@@ -468,6 +473,7 @@
                 <span class="shop__new-price">800 ₽</span>
               </div>
               <form action="#!" target="_blank">
+                <span class="visually-hidden">Купить в магазине</span>
                 <button class="shop-button">в магазин</button>
               </form>
             </div>
@@ -490,6 +496,7 @@
                 <span class="shop__new-price new-price">3500 ₽</span>
               </div>
               <form action="#!" target="_blank">
+                <span class="visually-hidden">Купить в магазине</span>
                 <button class="shop-button">в магазин</button>
               </form>
             </div>
@@ -513,6 +520,7 @@
                 <span class="shop__new-price">400 ₽</span>
               </div>
               <form action="#!" target="_blank">
+                <span class="visually-hidden">Купить в магазине</span>
                 <button class="shop-button">в магазин</button>
               </form>
             </div>
